renamed stuff
Took 4 minutes

Took 2 minutes

Took 53 seconds